<resources>
    <string name="ExoPlayer">ExoPlayer</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_expired">Account! Your Account has been expired. Please contact Support.</string>
    <string name="account_is_not_setup">Account is not setup. Please update username and password.</string>
    <string name="after_clearing_the_cache_the_app_will_restart">After clearing the cache, the app will restart.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">XCIPTV</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="auto_start_app_after_reboot">Auto Start App After Reboot</string>
    <string name="back_button_text">Go back</string>
    <string name="background_service_update_contents">Background Contents Update</string>
    <string name="background_update_process_is_running">Background Update Process is running!</string>
    <string name="backup_completed">Backup Completed</string>
    <string name="backup_completed_restore_running">Backup has been downloaded successfully. Please wait restore process running.</string>
    <string name="backup_or_restore_app_settings">Backup or Restore App Settings</string>
    <string name="backup_restore">Backup and Restore</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_libvlc_revision">13d2271</string>
    <string name="build_vlc_revision">9f11f8927f</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="do_you_want_to_delete_from_continue_watching">Do you want to delete VOD from continue watching?</string>
    <string name="do_you_want_to_remove_program_reminder">Do you want to remove this Program Reminder?</string>
    <string name="do_you_want_to_remove_recording">Do you want to remove Recording?</string>
    <string name="do_you_want_to_set_schedule_recording_and_set_program_reminder">Do you want to set Schedule Recording and set Program Reminder?</string>
    <string name="dummyChannelName">"Channel "</string>
    <string name="dummyDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</string>
    <string name="dummyGenre">"Action, Drama "</string>
    <string name="dummyLength">1 hr 10 min 2021</string>
    <string name="dummyMovieName">"Movie "</string>
    <string name="dummyName">John Doe and Others</string>
    <string name="dummyProgramOneTime">5:00 PM - 6:00 PM</string>
    <string name="dummyProgramTwoTime">6:00 PM - 7:00 PM</string>
    <string name="dummyRating">⭐⭐⭐⭐⭐⭐ (6.3)</string>
    <string name="dummyTVShowName">"TV Show "</string>
    <string name="enter_activation_code">ENTER ACTIVATION CODE</string>
    <string name="enter_backup_password">Please enter your backup password.</string>
    <string name="error_message_description_text">There was an issue getting more details about this ad</string>
    <string name="error_message_text">Something went wrong</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="expand_button_title">Advanced</string>
    <string name="ezserver_api">EZHOMETECH SERVER API</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="xc_auto">Auto</string>
    <string name="xc_cancel_str">Cancel</string>
    <string name="xc_change_password">Change Password</string>
    <string name="xc_close">Close</string>
    <string name="xc_current_pass">Current Password</string>
    <string name="xc_epg_timeshift_config">EPG Timeshift Configure</string>
    <string name="xc_episode">EPISODE</string>
    <string name="xc_expire">Expire</string>
    <string name="xc_is_trial">Is Trail</string>
    <string name="xc_live_tv">LIVE TV</string>
    <string name="xc_max_con">Max Conn</string>
    <string name="xc_message">Message</string>
    <string name="xc_new_pass">New Pass:</string>
    <string name="xc_old_pass">Old Pass:</string>
    <string name="xc_on_off">ON/OFF</string>
    <string name="xc_parental_control_on">PARENTAL CONTROL ON</string>
    <string name="xc_parental_control_setup">Parental Control Setup</string>
    <string name="xc_password">Password</string>
    <string name="xc_reset_password">Reset Password</string>
    <string name="xc_season">SEASON</string>
    <string name="xc_series">SERIES</string>
    <string name="xc_status">Status</string>
    <string name="xc_switch_account">Switch Account</string>
    <string name="xc_uninstall_app_to_reset_p_pass">To reset Uninstall app. Default 0000</string>
    <string name="xc_username">Username</string>
    <string name="xc_vod">VOD</string>
    <string name="xc_watched">WATCHED</string>
</resources>