<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:background="#d82b2a2a" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:gravity="center" android:id="@id/txt_title" android:background="#a30f100f" android:paddingTop="5.0dip" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_parental_control_setup" android:fontFamily="@font/quicksand_regular" />
            <TextView android:textSize="16.0sp" android:textStyle="italic" android:textColor="@android:color/background_light" android:id="@id/txt_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:text="@string/xc_uninstall_app_to_reset_p_pass" android:fontFamily="@font/quicksand_regular" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:id="@id/txt_old_pass_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_old_pass" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
                    <EditText android:textSize="16.0sp" android:id="@id/ed_old_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/xc_current_pass" android:password="true" android:layout_weight="1.0" android:inputType="textPersonName" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:id="@id/txt_new_password_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_new_pass" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
                    <EditText android:textSize="16.0sp" android:id="@id/ed_new_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/xc_password" android:password="true" android:layout_weight="1.0" android:inputType="textPersonName" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/layout_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="25.0dip" android:layout_below="@id/textview_title" android:layout_centerHorizontal="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:textSize="15.0sp" android:id="@id/btn_cancel" android:background="@drawable/btn_red" android:layout_width="180.0dip" android:layout_height="50.0dip" android:layout_marginRight="5.0dip" android:text="@string/xc_cancel_str" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
                <Button android:textSize="15.0sp" android:layout_gravity="center_horizontal" android:id="@id/btn_change" android:background="@drawable/btn" android:paddingLeft="5.0dip" android:layout_width="180.0dip" android:layout_height="50.0dip" android:layout_marginRight="5.0dip" android:text="@string/xc_change_password" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>