<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/orplayer_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_bg" android:background="@drawable/corner_shadow" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="100.0dip">
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@android:color/holo_green_light" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/txt_lock_unlock" android:background="@color/orplayer_header_color" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/xc_parental_control_on" android:fontFamily="@font/quicksand_light" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <Button android:id="@id/btn_reset_password" android:background="@drawable/btn" android:layout_width="170.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/xc_reset_password" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
                    <Button android:id="@id/btn_parental_control" android:background="@drawable/btn" android:layout_width="170.0dip" android:layout_height="40.0dip" android:layout_marginLeft="5.0dip" android:text="@string/xc_on_off" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip">
            <TextView android:textSize="20.0sp" android:textColor="@color/orplayer_skyblue_font_color" android:gravity="left" android:id="@id/textView9" android:background="#1400bcd4" android:paddingLeft="40.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/xc_live_tv" android:layout_weight="1.0" android:fontFamily="@font/quicksand_medium" />
            <TextView android:textSize="20.0sp" android:textColor="@color/orplayer_skyblue_font_color" android:gravity="left" android:id="@id/textView8" android:background="#208bc34a" android:paddingLeft="40.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/xc_vod" android:layout_weight="1.0" android:fontFamily="@font/quicksand_medium" />
            <TextView android:textSize="20.0sp" android:textColor="@color/orplayer_skyblue_font_color" android:gravity="left" android:id="@id/textView5" android:background="#1eff9800" android:paddingLeft="40.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/xc_series" android:layout_weight="1.0" android:fontFamily="@font/quicksand_medium" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/listview_tv" android:background="#0a00bcd4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_weight="1.0" />
            <ListView android:id="@id/listview_vod" android:background="#0f8bc34a" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="1.0" />
            <ListView android:id="@id/listview_series" android:background="#0fff9800" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:progressBarStyle" />
</FrameLayout>