<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textColor="@android:color/background_light" android:id="@id/txt_ep_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="TITLE" android:fontFamily="@font/quicksand_medium" />
        <TextView android:textSize="13.0sp" android:textColor="@android:color/background_light" android:id="@id/txt_ep_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:fontFamily="@font/quicksand_regular" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:textColor="#ffffc107" android:id="@id/txt_ep_no" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/xc_episode" android:fontFamily="@font/quicksand_medium" />
                <TextView android:textColor="@color/orplayer_skyblue_font_color" android:id="@id/txt_ep_season" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:text="@string/xc_season" android:fontFamily="@font/quicksand_medium" />
            </LinearLayout>
            <TextView android:textColor="@android:color/background_light" android:layout_gravity="right" android:id="@id/txt_watched" android:background="@android:color/holo_green_dark" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/xc_watched" android:fontFamily="@font/quicksand_medium" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>