<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:background="#d82b2a2a" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_username_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_username" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:gravity="left" android:id="@id/txt_username_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_message_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_message" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:gravity="left" android:id="@id/txt_message_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_trail_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_is_trial" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/holo_orange_light" android:gravity="left" android:id="@id/txt_trail_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_maxcon_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_max_con" android:lines="1" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:gravity="left" android:id="@id/txt_maxcon_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_expire_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_expire" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/holo_orange_light" android:gravity="left" android:id="@id/txt_expire_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textColor="@android:color/primary_text_dark" android:gravity="left" android:id="@id/txt_status_d_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xc_status" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                    <TextView android:textSize="16.0sp" android:textColor="@android:color/background_light" android:gravity="left" android:id="@id/txt_status_d" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:layout_centerHorizontal="true" android:fontFamily="@font/quicksand_regular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_yes" android:background="@drawable/btn_red" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/xc_close" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/button_sw" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:text="@string/xc_switch_account" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>