<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0sp" android:textColor="@android:color/background_light" android:id="@id/txt_ep_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="TITLE" android:fontFamily="@font/quicksand_regular" />
        <TextView android:textColor="@android:color/holo_orange_light" android:id="@id/txt_ep_no" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/xc_episode" android:fontFamily="@font/quicksand_bold" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textColor="@android:color/holo_blue_light" android:id="@id/txt_ep_season" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/xc_season" android:layout_weight="1.0" android:fontFamily="sans-serif" />
                <TextView android:textSize="13.0sp" android:textColor="@android:color/background_light" android:layout_gravity="right" android:id="@id/txt_watched" android:background="@android:color/holo_green_dark" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_marginBottom="2.0dip" android:text="@string/xc_watched" android:layout_weight="1.0" android:fontFamily="@font/quicksand_medium" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>