<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:background="#d82b2a2a" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@android:color/background_light" android:gravity="center" android:id="@id/textView6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/xc_epg_timeshift_config" android:fontFamily="@font/quicksand_regular" />
        <TextView android:textSize="30.0sp" android:gravity="center" android:id="@id/txt_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="0" android:fontFamily="@font/quicksand_bold" />
        <LinearLayout android:id="@id/layout_button" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="25.0dip" android:layout_below="@id/textview_title" android:layout_centerHorizontal="true">
            <Button android:textSize="25.0sp" android:id="@id/btn_auto" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/xc_auto" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
            <Button android:textSize="40.0sp" android:id="@id/btn_minus" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="-" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
            <Button android:textSize="30.0sp" android:id="@id/btn_add" android:background="@drawable/btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="+" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
            <Button android:textSize="25.0sp" android:id="@id/btn_close" android:background="@drawable/btn_red" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/xc_close" android:layout_weight="1.0" android:fontFamily="@font/quicksand_regular" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>